# Whisper-On-Mac

./: .gitignore  ConvertModel.py  README.md  pyproject.toml  whisperonmac.py
