[project]
name = "whisper-on-mac"
version = "0.1.0"
description = ""
authors = [
    {name = "Mux",email = "muxxum65536@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
